# haskell-programming-from-first-principles

./: blah.hs
chap_10/: chapter_exercises.hs  database_processing.hs  exercises.md  scan_fibs.hs
chap_11/: binary_to_list.hs  binary_tree.hs  chapter_exercises.hs  constructing_deconstructing.hs  da_phone.hs  doggies.hs  exercises.md  huttons_razor.hs  logic_goats.hs  normal_form.hs  product_types.hs  programmers.hs  sum_types.hs  vehicles.hs
chap_12/: chapter_exercises.hs  exercises.md  person_either.hs
chap_13/: exercises.md  gimmePerson.hs  palindrome.hs  vigenere_updated.hs
chap_14/: chapter_exercises.hs  exercises.md  hangman.hs  word_number.hs
chap_14/morse/: morse.cabal
chap_14/morse/.stack-work/install/x86_64-osx/lts-7.15/8.0.1/flag-cache/: morse-0.1.0.0-2F1yPlPNpWt5tEDudMRXxi
chap_14/morse/.stack-work/install/x86_64-osx/lts-7.15/8.0.1/lib/x86_64-osx-ghc-8.0.1/morse-0.1.0.0-2F1yPlPNpWt5tEDudMRXxi/: libHSmorse-0.1.0.0-2F1yPlPNpWt5tEDudMRXxi-ghc8.0.1.dylib
chap_14/morse/.stack-work/install/x86_64-osx/lts-7.15/8.0.1/pkgdb/: morse-0.1.0.0-2F1yPlPNpWt5tEDudMRXxi.conf  package.cache
chap_14/morse/src/: Main.hs  Morse.hs
chap_14/morse/tests/: tests.hs
chap_14/wordnumbers/: wordnumbers.cabal
chap_14/wordnumbers/.stack-work/install/x86_64-osx/lts-7.15/8.0.1/flag-cache/: wordnumbers-0.1.0.0-7IO8zslV8ZRJQ0h50lSU49
chap_14/wordnumbers/.stack-work/install/x86_64-osx/lts-7.15/8.0.1/lib/x86_64-osx-ghc-8.0.1/wordnumbers-0.1.0.0-7IO8zslV8ZRJQ0h50lSU49/: WordNumber.hi
chap_14/wordnumbers/.stack-work/install/x86_64-osx/lts-7.15/8.0.1/pkgdb/: package.cache  wordnumbers-0.1.0.0-7IO8zslV8ZRJQ0h50lSU49.conf
chap_14/wordnumbers/src/: WordNumber.hs
chap_14/wordnumbers/tests/: tests.hs
chap_15/: First.hs  Optional.hs  chapter_exercises_monoid.hs  chapter_exercises_semigroup.hs  exercises.md  madlibbin.hs
chap_16/: chapter_exercises.hs  exercises.md  heavy_lifting.hs  instances_of_func.hs  possibly.hs  rearrange.hs  replace_experiment.hs  short_exercise.hs
chap_17/: applicatives_in_use.hs  bad_monoid.hs  chapter_exercises.hs  combinations.hs  constant_instance.hs  exercises.md  identity_instance.hs  list_applicative.hs  lookups.hs  validation_applicative.hs  ziplist_applicative.hs
chap_18/: answer_is_exercise.hs  chapter_exercises.hs  either_monad.hs  example_of_either_monad.hs  example_of_list_monad.hs  example_of_maybe_monad.hs  exercises.md
chap_2/: exercises.hs  triple.hs  waxOn.hs  where.hs
chap_20/: chapter_exercises.hs  exercises.md  library_functions.hs
chap_21/: chapter_exercises.hs  exercises.md  http_stuff.hs
chap_22/: ask.hs  demo_func_applicative.hs  exercises.md  reader_boop.hs  reader_monad.hs  reader_practice.hs  reading_comprehension.hs  warming_up.hs
chap_23/: chapter_exercises.hs  exercises.md  fizzbuzz.hs  fizzbuzz_differently.hs  random_example_two.hs  roll_your_own.hs  (+2 more)
(+165 files in other folders)
