name:                wordnumbers
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/wordnumbers#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  ghc-options:          -Wall -fwarn-tabs
  exposed-modules:     WordNumber
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable wordnumbers-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , wordnumbers
  default-language:    Haskell2010

test-suite tests
  type:                 exitcode-stdio-1.0
  main-is:              tests.hs
  hs-source-dirs:       tests
  default-language:     Haskell2010
  ghc-options:          -Wall -fwarn-tabs
  build-depends:        base >= 4.7 && < 5
                      , wordnumbers
                      , hspec
                      , QuickCheck
  default-language:     Haskell2010